<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.space.haram_android.ui.home.HomeViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            tools:context=".ui.home.HomeFragment">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#F2F3F5"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp">

                <TextView
                    android:id="@+id/home_notice_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_marginStart="5dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/all_app_font"
                    android:text="@{viewModel.homeRes.notice.notice.get(0).title}"
                    android:textColor="@color/grayBlack"
                    android:textStyle="normal"
                    app:autoSizeTextType="uniform"
                    app:drawableStartCompat="@drawable/home_space_notice_20dp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                app:cardBackgroundColor="#79BD9A"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/home_banner_viewPage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:homeBanner="@{viewModel.homeRes.banner.banners}" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/greenBackGround_chapel"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_margin="25dp"
                        android:contentDescription="@string/home_chapel_text"
                        app:srcCompat="@drawable/home_chapel_icon_40dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_regulated_string"
                            android:textColor="@color/white"
                            android:textSize="@dimen/title_text3"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loading"
                            android:textColor="@color/white"
                            android:textSize="@dimen/main_text2"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_chapel_string"
                            android:textColor="@color/white"
                            android:textSize="@dimen/title_text3"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loading"
                            android:textColor="@color/white"
                            android:textSize="@dimen/main_text2"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/home_exit_string"
                            app:srcCompat="@drawable/home_chapel_exit_13dp" />

                    </FrameLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/home_link_title"
                android:textColor="@color/grayBlack"
                android:textSize="@dimen/title_text2"
                android:textStyle="bold"
                app:autoSizeTextType="uniform" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:columnCount="4"
                android:rowCount="2">

                <TextView
                    android:id="@+id/home_fun_mileage"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/home_fun_mileage_title"
                    android:textStyle="normal"
                    app:drawableTopCompat="@drawable/home_fun_mileage_22dp" />

                <TextView
                    android:id="@+id/home_fun_chapel"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/home_fun_chapel_title"
                    android:textStyle="normal"
                    app:chapel="@{1}"
                    app:drawableTopCompat="@drawable/home_fun_chapel_22dp" />

                <TextView
                    android:id="@+id/home_fun_notice"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/home_fun_notice_title"
                    android:textStyle="normal"
                    app:drawableTopCompat="@drawable/home_fun_notice_22dp" />

                <TextView
                    android:id="@+id/home_fun_book"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/home_fun_book_title"
                    android:textStyle="normal"
                    app:drawableTopCompat="@drawable/home_fun_book_22dp" />

                <TextView
                    android:id="@+id/home_fun_bible"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/home_fun_bible_title"
                    android:textStyle="normal"
                    app:drawableTopCompat="@drawable/home_fun_bible_22dp" />

                <TextView
                    android:id="@+id/home_fun_coalition"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/home_fun_coalition_title"
                    android:textStyle="normal"
                    app:drawableTopCompat="@drawable/home_fun_coalition_22dp" />

                <TextView
                    android:id="@+id/home_fun_schedule"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/home_fun_scheadule_title"
                    android:textStyle="normal"
                    app:drawableTopCompat="@drawable/home_fun_schedule_22dp" />

                <TextView
                    android:id="@+id/home_fun_reading"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:text="@string/home_fun_reading_title"
                    android:textStyle="normal"
                    app:drawableTopCompat="@drawable/home_fun_reading_22dp" />
            </GridLayout>

            <TextView
                android:id="@+id/kbu_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/home_news_title"
                android:textColor="@color/grayBlack"
                android:textSize="@dimen/title_text2"
                android:textStyle="bold"
                app:autoSizeTextType="uniform" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_news_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:paddingTop="15dp"
                app:homeNews="@{viewModel.homeRes.kokkoks.kbuNews}" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
