<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            tools:context=".ui.auth.find.FindVerifyFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/find_verify_title"
                    android:textColor="@color/blackTitle"
                    android:textSize="@dimen/title_text2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/find_verify_info_text"
                    android:textColor="@color/grayText"
                    android:textSize="@dimen/main_text3"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/find_verify_email_title"
                    android:textColor="@color/blackTitle"
                    android:textSize="@dimen/main_text3"
                    android:textStyle="normal" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/boxBackground"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/boxStrokeColor"
                    app:strokeWidth="1sp">

                    <EditText
                        android:id="@+id/email_verify"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:autofillHints="ID"
                        android:background="@android:color/transparent"
                        android:hint="확인코드"
                        android:inputType="textEmailAddress"
                        android:nextFocusDown="@+id/password"
                        android:padding="10dp"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/grayText"
                        android:textSize="@dimen/main_text3" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/singup_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                app:cardBackgroundColor="@color/greenBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/find_verify_continue_button"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
